@startuml database-schema
!theme plain

entity "office_settings" {
    * id : Long <<PK>>
    --
    required_days_per_week : Int
    required_hours_per_week : Float
    weekday_preferences : String
}

entity "daily_entries" {
    * date : LocalDate <<PK>>
    --
    hours_worked : Float
    is_office_day : Boolean
    notes : String?
}

entity "office_presence" {
    * id : Long <<PK>>
    --
    date : LocalDate
    entry_time : DateTime?
    exit_time : DateTime?
}

entity "holidays" {
    * id : Long <<PK>>
    --
    date : LocalDate
    name : String
    country_code : String
    is_public : Boolean
}

entity "office_location" {
    * id : Long <<PK>>
    --
    latitude : Double
    longitude : Double
    radius_meters : Float
    name : String
}

office_presence }o--|| daily_entries : aggregates to
office_location ||--o{ office_presence : tracks at

@enduml

